# bisque-tools-cli

./: Cargo.toml  install.sh  release.sh
.github/workflows/: release.yml
docs/: klaviyo-sync-prototype-plan.md
src/: api.rs  commands.rs  commands_sync.rs  config.rs  main.rs  upload.rs  validate.rs
src/sync/: apply.rs  errors.rs  mod.rs  plan.rs  render.rs  state.rs  workspace.rs
src/sync/help/: mod.rs
src/sync/help/topics/: klaviyo.md  klaviyo_template.md  schema.md  troubleshooting.md  workflow.md
src/sync/providers/: klaviyo.rs  mod.rs
src/sync/providers/klaviyo_schemas/: template.schema.json
templates/: core-skill.md
