[package]
name = "bisque"
version = "0.3.1"
edition = "2021"
description = "Bisque CLI — manage integrations and execute tools"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
ureq = "2"
flate2 = "1"
tar = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
